Providers cleanups and improvements

--- a/providers/apk.yaml
+++ b/providers/apk.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["alpine"]
   executable: "apk"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "enable", "disable", "status", "logs"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -42,39 +42,7 @@ actions:
     timeout: 300
     detection: "apk info {{sai_package(0, 'package_name', 'apk')}} >/dev/null 2>&1"
 
-  start:
-    description: "Start service via rc-service"
-    template: "rc-service {{sai_service(0, 'service_name', 'apk')}} start"
-    validation:
-      command: "rc-service {{sai_service(0, 'service_name', 'apk')}} status"
-      expected_output: "started"
 
-  stop:
-    description: "Stop service via rc-service"
-    template: "rc-service {{sai_service(0, 'service_name', 'apk')}} stop"
-    validation:
-      command: "rc-service {{sai_service(0, 'service_name', 'apk')}} status"
-      expected_output: "stopped"
-
-  restart:
-    description: "Restart service via rc-service"
-    template: "rc-service {{sai_service(0, 'service_name', 'apk')}} restart"
-
-  enable:
-    description: "Enable service auto-start"
-    template: "rc-update add {{sai_service(0, 'service_name', 'apk')}} default"
-
-  disable:
-    description: "Disable service auto-start"
-    template: "rc-update del {{sai_service(0, 'service_name', 'apk')}} default"
-
-  status:
-    description: "Check service status"
-    template: "rc-service {{sai_service(0, 'service_name', 'apk')}} status"
-
-  logs:
-    description: "Show service logs"
-    template: "tail -n 50 {{sai_file('log', 'path', 'apk')}}"
 
   info:
     description: "Show package information"
