--- a/providers/apt.yaml
+++ b/providers/apt.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["debian", "ubuntu"]
   executable: "apt-get"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "enable", "disable", "status", "logs"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -42,40 +42,10 @@ actions:
         command: "apt-get upgrade -y {{sai_package('*', 'package_name', 'apt')}}"
     timeout: 600
     detection: "dpkg -l | grep -q '^ii.*{{sai_package(0, 'package_name', 'apt')}}'"
-
-  start:
-    description: "Start service via systemctl"
-    template: "systemctl start {{sai_service(0, 'service_name', 'apt')}}"
     validation:
-      command: "systemctl is-active {{sai_service(0, 'service_name', 'apt')}}"
-      expected_output: "active"
+      command: "dpkg -l | grep {{sai_package(0, 'package_name', 'apt')}}"
+      expected_exit_code: 0
 
-  stop:
-    description: "Stop service via systemctl"
-    template: "systemctl stop {{sai_service(0, 'service_name', 'apt')}}"
-    validation:
-      command: "systemctl is-active {{sai_service(0, 'service_name', 'apt')}}"
-      expected_output: "inactive"
-
-  restart:
-    description: "Restart service via systemctl"
-    template: "systemctl restart {{sai_service(0, 'service_name', 'apt')}}"
-
-  enable:
-    description: "Enable service auto-start"
-    template: "systemctl enable {{sai_service(0, 'service_name', 'apt')}}"
-
-  disable:
-    description: "Disable service auto-start"
-    template: "systemctl disable {{sai_service(0, 'service_name', 'apt')}}"
-
-  status:
-    description: "Check service status"
-    template: "systemctl status {{sai_service(0, 'service_name', 'apt')}}"
-
-  logs:
-    description: "Show service logs"
-    template: "journalctl -u {{sai_service(0, 'service_name', 'apt')}} --no-pager -n 50"
 
   info:
     description: "Show package information"
