--- a/providers/brew.yaml
+++ b/providers/brew.yaml
@@ -44,6 +44,9 @@ actions:
     template: "brew upgrade {{sai_package('*', 'package_name', 'brew')}}"
     timeout: 600
     detection: "brew list | grep -q '^{{sai_package(0, 'package_name', 'brew')}}'"
+    validation:
+      command: "brew list | grep {{sai_package(0, 'package_name', 'brew')}}"
+      expected_exit_code: 0
 
   start:
     description: "Start service via brew services"
@@ -62,14 +65,23 @@ actions:
   restart:
     description: "Restart service via brew services"
     template: "brew services restart {{sai_service(0, 'service_name', 'brew')}}"
+    validation:
+      command: "brew services list | grep {{sai_service(0, 'service_name', 'brew')}} | grep started"
+      expected_exit_code: 0
 
   enable:
     description: "Enable service auto-start"
     template: "brew services start {{sai_service(0, 'service_name', 'brew')}}"
+    validation:
+      command: "brew services list | grep {{sai_service(0, 'service_name', 'brew')}} | grep started"
+      expected_exit_code: 0
 
   disable:
     description: "Disable service auto-start"
     template: "brew services stop {{sai_service(0, 'service_name', 'brew')}}"
+    validation:
+      command: "brew services list | grep {{sai_service(0, 'service_name', 'brew')}} | grep stopped"
+      expected_exit_code: 0
 
   status:
     description: "Check service status"
@@ -78,6 +90,8 @@ actions:
   logs:
     description: "Show service logs"
     template: "tail -n 50 {{sai_file('log', 'path', 'brew')}}"
+
+
 
   info:
     description: "Show package information"
