--- a/providers/cargo.yaml
+++ b/providers/cargo.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["linux", "macos", "windows"]
   executable: "cargo"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "status"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -35,26 +35,7 @@ actions:
     timeout: 600
     detection: "cargo search {{sai_package(0, 'package_name', 'cargo')}} >/dev/null 2>&1"
 
-  start:
-    description: "Start Rust application"
-    template: "{{sai_command(0, 'path', 'cargo')}}"
 
-  stop:
-    description: "Stop Rust application"
-    template: "pkill -f {{sai_package(0, 'package_name', 'cargo')}}"
-
-  restart:
-    description: "Restart Rust application"
-    steps:
-      - name: "stop-app"
-        command: "pkill -f {{sai_package(0, 'package_name', 'cargo')}}"
-        ignore_failure: true
-      - name: "start-app"
-        command: "{{sai_command(0, 'path', 'cargo')}}"
-
-  status:
-    description: "Check application status"
-    template: "pgrep -f {{sai_package(0, 'package_name', 'cargo')}}"
 
   info:
     description: "Show package information"
