--- a/providers/choco.yaml
+++ b/providers/choco.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["windows"]
   executable: "choco"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "enable", "disable", "status", "logs"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -35,43 +35,7 @@ actions:
     timeout: 600
     detection: "choco info {{sai_package(0, 'package_name', 'choco')}} >/dev/null 2>&1"
 
-  start:
-    description: "Start service via sc command"
-    template: "sc start {{sai_service(0, 'service_name', 'choco')}}"
-    validation:
-      command: "sc query {{sai_service(0, 'service_name', 'choco')}} | findstr RUNNING"
-      expected_exit_code: 0
 
-  stop:
-    description: "Stop service via sc command"
-    template: "sc stop {{sai_service(0, 'service_name', 'choco')}}"
-    validation:
-      command: "sc query {{sai_service(0, 'service_name', 'choco')}} | findstr STOPPED"
-      expected_exit_code: 0
-
-  restart:
-    description: "Restart service via sc command"
-    steps:
-      - name: "stop-service"
-        command: "sc stop {{sai_service(0, 'service_name', 'choco')}}"
-      - name: "start-service"
-        command: "sc start {{sai_service(0, 'service_name', 'choco')}}"
-
-  enable:
-    description: "Enable service auto-start"
-    template: "sc config {{sai_service(0, 'service_name', 'choco')}} start= auto"
-
-  disable:
-    description: "Disable service auto-start"
-    template: "sc config {{sai_service(0, 'service_name', 'choco')}} start= disabled"
-
-  status:
-    description: "Check service status"
-    template: "sc query {{sai_service(0, 'service_name', 'choco')}}"
-
-  logs:
-    description: "Show service logs"
-    template: "Get-WinEvent -LogName Application | Where-Object {$_.ProviderName -eq '{{sai_package(0, 'package_name', 'choco')}}'} | Select-Object -First 50"
 
   info:
     description: "Show package information"
