--- a/providers/dnf.yaml
+++ b/providers/dnf.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["fedora", "rhel", "centos", "rocky", "alma"]
   executable: "dnf"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "enable", "disable", "status", "logs"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -34,40 +34,11 @@ actions:
     template: "dnf upgrade -y {{sai_package('*', 'package_name', 'dnf')}}"
     timeout: 600
     detection: "rpm -qa | grep -q {{sai_package(0, 'package_name', 'dnf')}}"
-
-  start:
-    description: "Start service via systemctl"
-    template: "systemctl start {{sai_service(0, 'service_name', 'dnf')}}"
     validation:
-      command: "systemctl is-active {{sai_service(0, 'service_name', 'dnf')}}"
-      expected_output: "active"
+      command: "rpm -qa | grep {{sai_package(0, 'package_name', 'dnf')}}"
+      expected_exit_code: 0
 
-  stop:
-    description: "Stop service via systemctl"
-    template: "systemctl stop {{sai_service(0, 'service_name', 'dnf')}}"
-    validation:
-      command: "systemctl is-active {{sai_service(0, 'service_name', 'dnf')}}"
-      expected_output: "inactive"
 
-  restart:
-    description: "Restart service via systemctl"
-    template: "systemctl restart {{sai_service(0, 'service_name', 'dnf')}}"
-
-  enable:
-    description: "Enable service auto-start"
-    template: "systemctl enable {{sai_service(0, 'service_name', 'dnf')}}"
-
-  disable:
-    description: "Disable service auto-start"
-    template: "systemctl disable {{sai_service(0, 'service_name', 'dnf')}}"
-
-  status:
-    description: "Check service status"
-    template: "systemctl status {{sai_service(0, 'service_name', 'dnf')}}"
-
-  logs:
-    description: "Show service logs"
-    template: "journalctl -u {{sai_service(0, 'service_name', 'dnf')}} --no-pager -n 50"
 
   info:
     description: "Show package information"
