--- a/providers/emerge.yaml
+++ b/providers/emerge.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["gentoo"]
   executable: "emerge"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "enable", "disable", "status", "logs"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -44,39 +44,7 @@ actions:
         timeout: 3600
     detection: "emerge --search {{sai_package(0, 'package_name', 'emerge')}} >/dev/null 2>&1"
 
-  start:
-    description: "Start service via rc-service"
-    template: "rc-service {{sai_service(0, 'service_name', 'emerge')}} start"
-    validation:
-      command: "rc-service {{sai_service(0, 'service_name', 'emerge')}} status"
-      expected_output: "started"
 
-  stop:
-    description: "Stop service via rc-service"
-    template: "rc-service {{sai_service(0, 'service_name', 'emerge')}} stop"
-    validation:
-      command: "rc-service {{sai_service(0, 'service_name', 'emerge')}} status"
-      expected_output: "stopped"
-
-  restart:
-    description: "Restart service via rc-service"
-    template: "rc-service {{sai_service(0, 'service_name', 'emerge')}} restart"
-
-  enable:
-    description: "Enable service auto-start"
-    template: "rc-update add {{sai_service(0, 'service_name', 'emerge')}} default"
-
-  disable:
-    description: "Disable service auto-start"
-    template: "rc-update del {{sai_service(0, 'service_name', 'emerge')}} default"
-
-  status:
-    description: "Check service status"
-    template: "rc-service {{sai_service(0, 'service_name', 'emerge')}} status"
-
-  logs:
-    description: "Show service logs"
-    template: "tail -n 50 {{sai_file('log', 'path', 'emerge')}}"
 
   info:
     description: "Show package information"
