--- a/providers/gem.yaml
+++ b/providers/gem.yaml
@@ -9,7 +9,7 @@ provider:
   platforms: ["linux", "macos", "windows"]
   priority: 30  # Lower priority, more specialized
   executable: "gem"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "status"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
