--- a/providers/gradle.yaml
+++ b/providers/gradle.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["linux", "macos", "windows"]
   executable: "gradle"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "status"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -39,26 +39,7 @@ actions:
     timeout: 600
     detection: "gradle dependencies | grep {{sai_package(0, 'package_name', 'gradle')}} >/dev/null 2>&1"
 
-  start:
-    description: "Start Java application"
-    template: "java -jar {{sai_command(0, 'path', 'gradle')}}"
 
-  stop:
-    description: "Stop Java application"
-    template: "pkill -f {{sai_package(0, 'package_name', 'gradle')}}"
-
-  restart:
-    description: "Restart Java application"
-    steps:
-      - name: "stop-app"
-        command: "pkill -f {{sai_package(0, 'package_name', 'gradle')}}"
-        ignore_failure: true
-      - name: "start-app"
-        command: "java -jar {{sai_command(0, 'path', 'gradle')}}"
-
-  status:
-    description: "Check application status"
-    template: "pgrep -f {{sai_package(0, 'package_name', 'gradle')}}"
 
   info:
     description: "Show package information"
