--- a/providers/nixpkgs.yaml
+++ b/providers/nixpkgs.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["nixos", "linux", "macos"]
   executable: "nix-env"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "enable", "disable", "status", "logs"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -39,39 +39,7 @@ actions:
     timeout: 600
     detection: "nix-env -q | grep {{sai_package(0, 'package_name', 'nixpkgs')}} >/dev/null 2>&1"
 
-  start:
-    description: "Start service via systemctl"
-    template: "systemctl start {{sai_service(0, 'service_name', 'nixpkgs')}}"
-    validation:
-      command: "systemctl is-active {{sai_service(0, 'service_name', 'nixpkgs')}}"
-      expected_output: "active"
 
-  stop:
-    description: "Stop service via systemctl"
-    template: "systemctl stop {{sai_service(0, 'service_name', 'nixpkgs')}}"
-    validation:
-      command: "systemctl is-active {{sai_service(0, 'service_name', 'nixpkgs')}}"
-      expected_output: "inactive"
-
-  restart:
-    description: "Restart service via systemctl"
-    template: "systemctl restart {{sai_service(0, 'service_name', 'nixpkgs')}}"
-
-  enable:
-    description: "Enable service auto-start"
-    template: "systemctl enable {{sai_service(0, 'service_name', 'nixpkgs')}}"
-
-  disable:
-    description: "Disable service auto-start"
-    template: "systemctl disable {{sai_service(0, 'service_name', 'nixpkgs')}}"
-
-  status:
-    description: "Check service status"
-    template: "systemctl status {{sai_service(0, 'service_name', 'nixpkgs')}}"
-
-  logs:
-    description: "Show service logs"
-    template: "journalctl -u {{sai_service(0, 'service_name', 'nixpkgs')}} --no-pager -n 50"
 
   info:
     description: "Show package information"
