--- a/providers/opkg.yaml
+++ b/providers/opkg.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["openwrt", "embedded"]
   executable: "opkg"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "enable", "disable", "status", "logs"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -43,36 +43,7 @@ actions:
     timeout: 300
     detection: "opkg list-installed | grep {{sai_package(0, 'package_name', 'opkg')}} >/dev/null 2>&1"
 
-  start:
-    description: "Start service via init script"
-    template: "/etc/init.d/{{sai_service(0, 'service_name', 'opkg')}} start"
-    validation:
-      command: "/etc/init.d/{{sai_service(0, 'service_name', 'opkg')}} status"
-      expected_exit_code: 0
 
-  stop:
-    description: "Stop service via init script"
-    template: "/etc/init.d/{{sai_service(0, 'service_name', 'opkg')}} stop"
-
-  restart:
-    description: "Restart service via init script"
-    template: "/etc/init.d/{{sai_service(0, 'service_name', 'opkg')}} restart"
-
-  enable:
-    description: "Enable service auto-start"
-    template: "/etc/init.d/{{sai_service(0, 'service_name', 'opkg')}} enable"
-
-  disable:
-    description: "Disable service auto-start"
-    template: "/etc/init.d/{{sai_service(0, 'service_name', 'opkg')}} disable"
-
-  status:
-    description: "Check service status"
-    template: "/etc/init.d/{{sai_service(0, 'service_name', 'opkg')}} status"
-
-  logs:
-    description: "Show service logs"
-    template: "logread | grep {{sai_service(0, 'service_name', 'opkg')}}"
 
   info:
     description: "Show package information"
