--- a/providers/pacman.yaml
+++ b/providers/pacman.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["arch", "manjaro", "endeavouros"]
   executable: "pacman"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "enable", "disable", "status", "logs"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -37,40 +37,12 @@ actions:
       - name: "upgrade-packages"
         command: "pacman -S --noconfirm {{sai_package('*', 'package_name', 'pacman')}}"
     timeout: 600
-
-  start:
-    description: "Start service via systemctl"
-    template: "systemctl start {{sai_service(0, 'service_name', 'pacman')}}"
+    detection: "pacman -Q | grep -q {{sai_package(0, 'package_name', 'pacman')}}"
     validation:
-      command: "systemctl is-active {{sai_service(0, 'service_name', 'pacman')}}"
-      expected_output: "active"
+      command: "pacman -Q | grep {{sai_package(0, 'package_name', 'pacman')}}"
+      expected_exit_code: 0
 
-  stop:
-    description: "Stop service via systemctl"
-    template: "systemctl stop {{sai_service(0, 'service_name', 'pacman')}}"
-    validation:
-      command: "systemctl is-active {{sai_service(0, 'service_name', 'pacman')}}"
-      expected_output: "inactive"
 
-  restart:
-    description: "Restart service via systemctl"
-    template: "systemctl restart {{sai_service(0, 'service_name', 'pacman')}}"
-
-  enable:
-    description: "Enable service auto-start"
-    template: "systemctl enable {{sai_service(0, 'service_name', 'pacman')}}"
-
-  disable:
-    description: "Disable service auto-start"
-    template: "systemctl disable {{sai_service(0, 'service_name', 'pacman')}}"
-
-  status:
-    description: "Check service status"
-    template: "systemctl status {{sai_service(0, 'service_name', 'pacman')}}"
-
-  logs:
-    description: "Show service logs"
-    template: "journalctl -u {{sai_service(0, 'service_name', 'pacman')}} --no-pager -n 50"
 
   info:
     description: "Show package information"
