--- a/providers/pypi.yaml
+++ b/providers/pypi.yaml
@@ -9,7 +9,7 @@ provider:
   platforms: ["linux", "macos", "windows"]
   priority: 25  # Lower priority, language-specific
   executable: "pip"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "status"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
