--- a/providers/slackpkg.yaml
+++ b/providers/slackpkg.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["slackware"]
   executable: "slackpkg"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "enable", "disable", "status", "logs"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -42,37 +42,11 @@ actions:
         command: "slackpkg upgrade {{sai_package('*', 'package_name', 'slackpkg')}}"
     timeout: 600
     detection: "ls /var/log/packages/ | grep {{sai_package(0, 'package_name', 'slackpkg')}} >/dev/null 2>&1"
-
-  start:
-    description: "Start service via rc script"
-    template: "/etc/rc.d/rc.{{sai_service(0, 'service_name', 'slackpkg')}} start"
     validation:
-      command: "pgrep -f {{sai_service(0, 'service_name', 'slackpkg')}}"
+      command: "ls /var/log/packages/ | grep {{sai_package(0, 'package_name', 'slackpkg')}}"
       expected_exit_code: 0
 
-  stop:
-    description: "Stop service via rc script"
-    template: "/etc/rc.d/rc.{{sai_service(0, 'service_name', 'slackpkg')}} stop"
 
-  restart:
-    description: "Restart service via rc script"
-    template: "/etc/rc.d/rc.{{sai_service(0, 'service_name', 'slackpkg')}} restart"
-
-  enable:
-    description: "Enable service auto-start"
-    template: "chmod +x /etc/rc.d/rc.{{sai_service(0, 'service_name', 'slackpkg')}}"
-
-  disable:
-    description: "Disable service auto-start"
-    template: "chmod -x /etc/rc.d/rc.{{sai_service(0, 'service_name', 'slackpkg')}}"
-
-  status:
-    description: "Check service status"
-    template: "/etc/rc.d/rc.{{sai_service(0, 'service_name', 'slackpkg')}} status"
-
-  logs:
-    description: "Show service logs"
-    template: "tail -n 50 {{sai_file('log', 'path', 'slackpkg')}}"
 
   info:
     description: "Show package information"
