--- a/providers/spack.yaml
+++ b/providers/spack.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["linux", "macos"]
   executable: "spack"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "status"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -39,26 +39,7 @@ actions:
         command: "spack install {{sai_package('*', 'package_name', 'spack')}}"
     timeout: 3600
 
-  start:
-    description: "Start application"
-    template: "spack load {{sai_package(0, 'package_name', 'spack')}} && {{sai_command(0, 'path', 'spack')}}"
 
-  stop:
-    description: "Stop application"
-    template: "pkill -f {{sai_package(0, 'package_name', 'spack')}}"
-
-  restart:
-    description: "Restart application"
-    steps:
-      - name: "stop-app"
-        command: "pkill -f {{sai_package(0, 'package_name', 'spack')}}"
-        ignore_failure: true
-      - name: "start-app"
-        command: "spack load {{sai_package(0, 'package_name', 'spack')}} && {{sai_command(0, 'path', 'spack')}}"
-
-  status:
-    description: "Check application status"
-    template: "pgrep -f {{sai_package(0, 'package_name', 'spack')}}"
 
   info:
     description: "Show package information"
