--- a/providers/xbps.yaml
+++ b/providers/xbps.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["void"]
   executable: "xbps-install"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "enable", "disable", "status", "logs"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
@@ -43,39 +43,7 @@ actions:
     timeout: 600
     detection: "xbps-query -l | grep {{sai_package(0, 'package_name', 'xbps')}} >/dev/null 2>&1"
 
-  start:
-    description: "Start service via sv"
-    template: "sv start {{sai_service(0, 'service_name', 'xbps')}}"
-    validation:
-      command: "sv status {{sai_service(0, 'service_name', 'xbps')}}"
-      expected_output: "run"
 
-  stop:
-    description: "Stop service via sv"
-    template: "sv stop {{sai_service(0, 'service_name', 'xbps')}}"
-    validation:
-      command: "sv status {{sai_service(0, 'service_name', 'xbps')}}"
-      expected_output: "down"
-
-  restart:
-    description: "Restart service via sv"
-    template: "sv restart {{sai_service(0, 'service_name', 'xbps')}}"
-
-  enable:
-    description: "Enable service auto-start"
-    template: "ln -sf /etc/sv/{{sai_service(0, 'service_name', 'xbps')}} /var/service/"
-
-  disable:
-    description: "Disable service auto-start"
-    template: "rm -f /var/service/{{sai_service(0, 'service_name', 'xbps')}}"
-
-  status:
-    description: "Check service status"
-    template: "sv status {{sai_service(0, 'service_name', 'xbps')}}"
-
-  logs:
-    description: "Show service logs"
-    template: "svlogtail {{sai_service(0, 'service_name', 'xbps')}}"
 
   info:
     description: "Show package information"
