--- a/providers/zypper.yaml
+++ b/providers/zypper.yaml
@@ -8,7 +8,7 @@ provider:
   type: "package_manager"
   platforms: ["opensuse", "sles"]
   executable: "zypper"  # Main executable for availability detection
-  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version", "start", "stop", "restart", "enable", "disable", "status", "logs"]
+  capabilities: ["install", "uninstall", "upgrade", "search", "info", "list", "version"]
 
 actions:
   install:
